module-4/task-1/nginx_cdn.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cdn
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  clusterIP: None
  selector:
    app: nginx-cdn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cdn
  labels:
    app: nginx-cdn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-cdn
  template:
    metadata:
      labels:
        app: nginx-cdn
    spec:
      containers:
      - name: details
        image: cr.yandex/crpcqt038mmskd2ime3g/nginx_cdn:latest
        imagePullPolicy: IfNotPresent
        command: ["nginx", "-g", "daemon off;"]
        resources:
         requests:
           memory: "512Mi"
           cpu: "500m"
         limits:
           memory: "512Mi"
           cpu: "500m"        
        ports:
         - name: http
           containerPort: 80
           protocol: TCP
        volumeMounts:
          - name: shared-data
            mountPath: /var/www/html/
        readinessProbe:
          exec:
            command:
              - wget
              - --spider
              - --quiet
              - http://localhost:80/.done
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          periodSeconds: 10
          failureThreshold: 5
        livenessProbe:
          exec:
            command:
              - wget
              - --spider
              - --quiet
              - http://localhost:80/
          initialDelaySeconds: 1
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      volumes:
        - name: shared-data
          emptyDir:
            sizeLimit: 100Mi
