module-4/task-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-cdn
  annotations:
    cert-manager.io/cluster-issuer: "http01-clusterissuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - nginx-cdn-user6cw36dht64w32dg.kube.praktikum-services.tech
    secretName: nginx-cdn
  rules:
  - host: nginx-cdn-user6cw36dht64w32dg.kube.praktikum-services.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-cdn
            port:
              number: 80
